changed  input type to month

--- a/nickdima/silk_thai/template/checkout/order_checkout.html
+++ b/nickdima/silk_thai/template/checkout/order_checkout.html
@@ -161,7 +161,7 @@
                             <div class="col-md-4 multi-horizontal" data-for="expiration">
                                 <div class="form-group">
                                     <label class="form-control-label mbr-fonts-style display-7" for="expiration-form1-g">Expiration</label>
-                                    <input type="expiration" class="form-control" name="expiration" required="true" id="expiration-form1-g">
+                                    <input type="month" class="form-control" name="expiration" required="true" id="expiration-form1-g">
                                 </div>
                             </div>
                             <div class="col-md-4 multi-horizontal" data-for="cvv">
