--- a/nickdima/lunchbreak/template/index.html
+++ b/nickdima/lunchbreak/template/index.html
@@ -250,7 +250,7 @@
                         </p>
                         <!--test button-->
                         <div class="mbr-section-btn text-center">
-                        <a href="{{url_for('lunchbreak.tetris')}}" class="btn btn-primary display-4">
+                        <a href="{{url_for('lunchbreak.flocking')}}" class="btn btn-primary display-4">
                             Play
                         </a>
                         </div>
