--- a/nickdima/lunchbreak/template/index.html
+++ b/nickdima/lunchbreak/template/index.html
@@ -193,6 +193,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
     <!--Segment games by 4-->
     <div class="container-fluid">
         <div class="media-container-row">
